src/FinancialForce Accounting/objects/codaCurrencyRevaluationGLAItem__c.object
<CustomObject>
    <description>The GLA list for a currency revaluation.</description>
    <fields>
        <fullName>CurrencyRevaluation__c</fullName>
        <description>Parent currency revaluation.</description>
        <label>Currency Revaluation</label>
        <referenceTo>codaCurrencyRevaluation__c</referenceTo>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <description>Parent General Ledger Account.</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluation GLA Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation GLA Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation GLA Item</label>
    <nameField>
        <displayFormat>CRG{000000000}</displayFormat>
        <label>CurrencyRevaluationGLAItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation GLA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>